--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "mini-css-extract-plugin": "0.11.3",
+    "mobx": "^6.3.2",
+    "mobx-react": "^7.2.0",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
