--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.6.0",
-    "jest-circus": "26.6.0",
+    "jest-circus": "^27.0.1",
+    "jest-junit": "^12.1.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
     "less": "^3.12.2",
@@ -81,7 +82,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "lint": "eslint --fix --ext .js,.jsx src"
   },
   "eslintConfig": {
     "extends": [
@@ -120,7 +122,7 @@
       "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
     ],
     "testEnvironment": "jsdom",
-    "testRunner": "E:\\saas-web\\node_modules\\jest-circus\\runner.js",
+    "testRunner": "E:\\react-project-build\\node_modules\\jest-circus\\runner.js",
     "transform": {
       "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
